--- a/WebContent/css/announcement.css
+++ b/WebContent/css/announcement.css
@@ -116,3 +116,23 @@ body {
     margin-left: -10px;
     margin-top: -3px;
 }
+
+#imptmessage {
+	font-weight: bold;
+	color: red;
+	border-top: 1px solid #e5e5e5;
+}
+
+.domains {
+	display: none;
+}
+
+.domainName {
+	font-weight: bold;
+	color: green;
+}
+
+#imptmessage2 {
+	font-weight: bold;
+	color: red;
+}
