file upload and adjustments for fyp laptop

--- a/WebContent/css/announcement.css
+++ b/WebContent/css/announcement.css
@@ -136,3 +136,18 @@ body {
 	font-weight: bold;
 	color: red;
 }
+
+#uniqueContainer {
+	width: 50%;
+	margin: auto;
+	margin-top: 40px;
+	margin-bottom: 30px;
+}
+
+#ubutton {
+	float: right;
+}
+
+#uniqueCode {
+	margin-top: 30px;
+}
